move modules files

--- a/src/scss/planmyday.scss
+++ b/src/scss/planmyday.scss
@@ -1,200 +1,5 @@
-//  ======================= Reset style ============================= //
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-    vertical-align: baseline;
-    font-family: inherit;
-    color: inherit;
-}
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-    line-height: 1;
-    font-family: 'now regular';
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-p {
-    font-size: 15px;
-}
-section {
-    padding: 100px 0 70px;
-}
-input, select, textarea {
-    min-height: 40px;
-    background: #FEFEFE;
-    border: 1px solid #989898;
-    width: 100%;
-    padding: 0 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-         box-sizing: border-box;
+@import 'modules/fonts', 'modules/variable', 'modules/mixin', 'modules/general';
 
-}
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-         box-sizing: border-box;
-}
-// ================================= Font ================================= //
-@font-face {
-    font-family: 'AphroditeSlimText';
-    src: url('../../src/fonts/aphrodite/aphrodite_slim_text.woff2') format('woff2'),
-         url('....//src/fonts/aphrodite/aphrodite_slim_text.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'now medium';
-    src: url('../../src/fonts/now/now-medium.woff2') format('woff2'),
-         url('../../src/fonts/now/now-medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-@font-face {
-    font-family: 'now regular';
-    src: url('../../src/fonts/now/now-regular.woff2') format('woff2'),
-         url('../../src/fonts/now/now-regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-// ================================= Variable ============================= //
-$mainColor: #4E5C46;
-$secondColor: #869554;
-$greenAlt: #89A58F;
-$greyColor: #4D4D4D;
-
-// ================================= MIXIN ================================ //
-@mixin section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-} 
-@mixin titlelatin ($fontSize: 30px, $color: $greyColor){
-    font-family: 'AphroditeSlimText';
-    font-size: $fontSize;
-    color: $color;
-    font-weight: 400;
-}
-@mixin dividerRight ($line: right, $color: #fff){
-    background-image: linear-gradient(to $line, $color, rgba(255, 248, 248, 0) 100%, transparent);
-}
-@mixin dividerLeft ($line: right, $color: #fff){
-    background-image: linear-gradient(to $line, transparent, rgba(255, 255, 255, 0) 0%, $color);
-}
-
-@mixin dividerCart($height: 90%, $width: 90%) {
-    content: "";
-    height: $height;
-    width: $width;
-    display: block;
-    position: absolute;
-}
-@mixin subTitle ($size: 35px, $transform: uppercase){
-    font-size: $size;
-    font-family: 'now medium';
-    text-transform: $transform;
-}
-@mixin sectionCenter {
-    max-width: 830px;
-    margin: auto;
-    text-align: center;
-    width: 80%;
-}
-@mixin ornWrapper {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    min-height: 20px;
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-@mixin ornFlower ($width: 100%, $left: 0, $top: 0){
-    opacity: .6;
-    position: absolute;
-    width: $width;
-    left: $left;
-    top: $top;
-}
-@mixin normalText ($align: justify){
-    margin-top: 10px;
-    color: $greyColor;
-    font-size: 12px;
-    text-align: justify;
-    letter-spacing: 0.02em;
-    line-height: 1.5em;
-}
-@mixin contentFlex {
-    display: flex;
-    gap: 35px;
-}
-@mixin bullet ($right: -12px){
-    content: "";
-    display: block;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background: $greenAlt;     
-    right: $right;
-    top: 0px;
-    border-radius: 50%;
-}
-@mixin phone {
-    @media only screen and (max-width: 767px) { @content; }
-}
-@mixin desktop {
-    @media only screen and (min-width: 768px) { @content; }
-}
-// ====================================== ANIMATION =========================================== //
-@-moz-keyframes spin { 
-    100% { -moz-transform: rotate(360deg); } 
-}
-@-webkit-keyframes spin { 
-    100% { -webkit-transform: rotate(360deg); } 
-}
-@keyframes spin { 
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform:rotate(360deg); 
-    } 
-}
 //  ===================================== PLAN MY DAY =========================================== //
 .fixed-body {
     position: fixed;
@@ -1318,7 +1123,7 @@ footer {
                 }
                 .orm-pmd__flower-01 {
                     left: 55%;
-                    top: 0px;
+                    top: 30px;
                 }
             }
             .thanks, .names {
