--- a/src/scss/modules/_general.scss
+++ b/src/scss/modules/_general.scss
@@ -47,6 +47,7 @@ p {
 }
 section {
     padding: 100px 0 70px;
+    overflow: hidden;
 }
 input, select, textarea {
     min-height: 40px;
@@ -54,6 +55,7 @@ input, select, textarea {
     border: 1px solid #989898;
     width: 100%;
     padding: 0 10px;
+    border-radius: 5px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
@@ -63,4 +65,7 @@ input, select, textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
+}
+textarea {
+    padding: 10px;
 }
