--- a/src/scss/planmyday.scss
+++ b/src/scss/planmyday.scss
@@ -73,7 +73,7 @@
     }
   }
   &.boyongan {
-    margin-top: 45px;
+    margin-top: 55px;
 
     .date-flex {
       display: flex;
@@ -269,6 +269,7 @@ figure.fullwidth {
     position: relative;
     padding-top: 30px;
     max-width: 400px;
+    padding-bottom: 40px;
 
     .countdown-wrapper {
       display: flex;
@@ -328,11 +329,25 @@ figure.fullwidth {
 }
 .couple {
   @include section();
-  background-image: url("../../dist/images/ornaments/pmd-bg_texture.svg");
+  background-image: url("../../dist/images/ornaments/pmd-bg_texture.gif");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 360px;
   padding-bottom: 20px;
+
+  &::after {
+    content: "";
+    background: #f5f5f5;
+    width: 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.6;
+    z-index: 0;
+  }
+  & > div {
+    z-index: 1;
+  }
   .sub-header {
     p {
       font-family: "RobotoSerif";
@@ -387,14 +402,15 @@ figure.fullwidth {
 
   .content {
     @include contentFlex();
-    background-image: url("../../dist/images/ornaments/bg-date.svg");
+    background-image: url("../../dist/images/ornaments/bg-date.png");
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 360px;
     flex-direction: column;
-    padding-top: 120px;
-    padding-bottom: 17px;
     gap: 0;
+    padding-top: 100px;
+    padding-bottom: 108px;
+    width: 100%;
   }
   .pmday-button {
     margin-top: 20px;
@@ -409,12 +425,13 @@ figure.fullwidth {
       margin-right: -5px;
     }
     &.bottom {
-      margin-top: 64px;
+      margin-top: 80px;
     }
   }
 }
 
 .gallery {
+  margin-top: -80px;
   .content {
     position: relative;
     text-align: center;
@@ -654,6 +671,9 @@ figure.fullwidth {
     @include generalFont($size: 14px);
     line-height: 18px;
   }
+  h1 {
+    font-weight: 500;
+  }
   .title {
     text-transform: capitalize !important;
     font-size: 14px !important;
@@ -661,7 +681,6 @@ figure.fullwidth {
   .sub-title {
     font-family: "RobotoSerif";
     font-size: 12px;
-    max-width: 200px;
     margin-top: 15px;
     margin-bottom: 30px;
   }
@@ -680,7 +699,7 @@ figure.fullwidth {
   }
   .pmd-ornament-flower {
     position: absolute;
-    top: 0;
+    top: -15px;
     z-index: -1;
     width: 100%;
     img {
@@ -710,7 +729,7 @@ footer {
   height: 100%;
   position: fixed;
   z-index: 99;
-  background: #fff;
+  background: #f5f5f5;
   text-align: center;
   padding: 10px;
   background-image: url("../../dist/images/galleries/popup-image.png");
@@ -763,6 +782,7 @@ footer {
     }
     .logo {
       filter: invert(1);
+      opacity: 0.3;
     }
   }
   .minicard {
@@ -877,6 +897,17 @@ footer {
       width: 90%;
       margin-left: auto;
       margin-right: auto;
+    }
+    .prefooter .pmd-ornament-flower {
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      left: 0;
+      right: 0;
+      img {
+        object-fit: cover;
+        height: 100%;
+      }
     }
   }
 }
